[package]
name = "monitor-tool"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
palette = "*"
rand = { version = "*", optional = true }
iced = { version = "*", optional = true, default-features = false, features = [
    "glow",
    "glow_canvas",
    "async-std",
] }
iced_futures = { version = "*", optional = true }
async-std = { version = "*", optional = true }

[features]
default = ["sender", "app"]
app = ["iced", "iced_futures", "async-std"]
sender = ["rand", "palette/random"]
