[package]
name = "monitor-tool"
version = "0.2.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
palette = "*"
image = { version = "*", optional = true }
rand = { version = "*", optional = true }
iced = { version = "*", optional = true, default-features = false, features = [
    "glow",
    "glow_canvas",
    "async-std",
] }
iced_futures = { version = "*", optional = true }
async-std = { version = "*", optional = true }

[features]
default = ["sender", "app"]
app = ["iced", "iced_futures", "async-std", "image"]
sender = ["rand", "palette/random"]
